<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center_horizontal"
        android:text="@string/headerText"
        android:textAllCaps="true"
        android:textColor="@color/colorHeader"
        android:textSize="16sp"
        android:textStyle="bold"
        app:fontFamily="casual" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="15dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/q1TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/q1Text"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />

            <ImageView
                android:id="@+id/q1ImageView"
                android:layout_width="match_parent"
                android:layout_height="170dp"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/q1ImageDesc"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/q1" />

            <RadioGroup
                android:id="@+id/q1RadioGroup"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/q1RB1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1Choice1"/>

                <RadioButton
                    android:id="@+id/q1RB2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1Choice2" />

                <RadioButton
                    android:id="@+id/q1RB3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/q1Choice3" />
            </RadioGroup>

            <Button
                android:id="@+id/q1CheckButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@android:color/holo_green_light"
                android:onClick="checkQ1"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/checkButton_text"
                android:textAllCaps="false"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/q2TextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="40dp"
                android:text="@string/q2Text"
                android:textColor="@android:color/background_dark"
                android:textSize="16sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>